[gd_scene load_steps=20 format=2]

[ext_resource path="res://screens/chooseStoryScene/storyChooseManager.gd" type="Script" id=1]
[ext_resource path="res://sprites/images/blueBackground.png" type="Texture" id=2]
[ext_resource path="res://sprites/texts/historySelection.png" type="Texture" id=3]
[ext_resource path="res://sprites/images/flor.png" type="Texture" id=4]
[ext_resource path="res://sprites/images/estante.png" type="Texture" id=5]
[ext_resource path="res://sprites/images/kidReading.png" type="Texture" id=6]
[ext_resource path="res://sprites/images/whiteBackground.png" type="Texture" id=7]
[ext_resource path="res://sprites/texts/porquinhos.png" type="Texture" id=8]
[ext_resource path="res://sprites/texts/sereia.png" type="Texture" id=9]
[ext_resource path="res://sprites/texts/chapeuzinho.png" type="Texture" id=10]
[ext_resource path="res://sprites/images/lamp.png" type="Texture" id=11]
[ext_resource path="res://sprites/texts/ModoFacil.png" type="Texture" id=12]
[ext_resource path="res://sprites/texts/ModoDificil.png" type="Texture" id=13]
[ext_resource path="res://sprites/texts/ModeSelection.png" type="Texture" id=14]
[ext_resource path="res://transition2.tres" type="Animation" id=15]
[ext_resource path="res://sprites/texts/Voltar.png" type="Texture" id=16]
[ext_resource path="res://sprites/images/soundOn.png" type="Texture" id=17]

[sub_resource type="Animation" id=1]
resource_name = "transition"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("option1:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 249.122, -251.791 ), Vector2( 720.33, -251.791 ), Vector2( 244.457, -251.791 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("option1:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.560784 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.560784 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("option1/tresPorquinhos:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -18.3351, -6.30409 ), Vector2( -18.3351, -6.30409 ), Vector2( -18.3351, -6.30409 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("option1/tresPorquinhos:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("option1/tresPorquinhos2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 52.1277, 6.69745 ), Vector2( 52.1277, 6.69745 ), Vector2( 131.44, 6.69745 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("option1/tresPorquinhos2:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("chapeuzinhoVermelho:self_modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("chapeuzinhoVermelho:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 277.72, -183.674 ), Vector2( 709.272, -183.674 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("chapeuzinhoVermelho:shape_visible")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("option2:rect_position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 249, -133 ), Vector2( 716.709, -133 ), Vector2( 245.501, -133 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("option2:self_modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.560784 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.560784 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("option2/pequenaSereia:position")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -18.9799, -6.37963 ), Vector2( -18.9799, -6.37963 ), Vector2( -18.9799, -6.37963 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("option2/pequenaSereia:self_modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("option2/pequenaSereia2:position")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 53.3979, 5.78809 ), Vector2( 53.3979, 5.78809 ), Vector2( 121.047, 10.4535 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("option2/pequenaSereia2:self_modulate")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("option1/tresPorquinhos2:normal")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 8 ), ExtResource( 8 ), ExtResource( 12 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("option2/pequenaSereia2:normal")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 9 ), ExtResource( 13 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("question:self_modulate")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("question:texture")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 3 ), ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "transition3"
tracks/0/type = "value"
tracks/0/path = NodePath("estante:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("kidReading:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("question:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("option1/tresPorquinhos:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("option1:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.560784 ), Color( 1, 1, 1, 0 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("option1/tresPorquinhos2:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("option1/tresPorquinhos2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 131.44, 6.697 ), Vector2( 131.44, 6.697 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("option1/tresPorquinhos:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -18.3351, -6.30409 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("option1:rect_position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 244.457, -251.791 ), Vector2( 244.457, -251.791 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("chapeuzinhoVermelho:self_modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("chapeuzinhoVermelho:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 277.72, -183.674 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("light:self_modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("voltar:self_modulate")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("musicButton:self_modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("option2:rect_position")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 245.501, -133 ), Vector2( 245.501, -133 ) ]
}
tracks/15/type = "value"
tracks/15/path = NodePath("option2:self_modulate")
tracks/15/interp = 1
tracks/15/loop_wrap = true
tracks/15/imported = false
tracks/15/enabled = true
tracks/15/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.560784 ), Color( 1, 1, 1, 0 ) ]
}
tracks/16/type = "value"
tracks/16/path = NodePath("option2/pequenaSereia:self_modulate")
tracks/16/interp = 1
tracks/16/loop_wrap = true
tracks/16/imported = false
tracks/16/enabled = true
tracks/16/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/17/type = "value"
tracks/17/path = NodePath("option2/pequenaSereia:position")
tracks/17/interp = 1
tracks/17/loop_wrap = true
tracks/17/imported = false
tracks/17/enabled = true
tracks/17/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -18.9799, -6.37963 ) ]
}
tracks/18/type = "value"
tracks/18/path = NodePath("option2/pequenaSereia2:position")
tracks/18/interp = 1
tracks/18/loop_wrap = true
tracks/18/imported = false
tracks/18/enabled = true
tracks/18/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 121.047, 10.453 ), Vector2( 121.047, 10.453 ) ]
}
tracks/19/type = "value"
tracks/19/path = NodePath("option2/pequenaSereia2:self_modulate")
tracks/19/interp = 1
tracks/19/loop_wrap = true
tracks/19/imported = false
tracks/19/enabled = true
tracks/19/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/20/type = "value"
tracks/20/path = NodePath("floor2:self_modulate")
tracks/20/interp = 1
tracks/20/loop_wrap = true
tracks/20/imported = false
tracks/20/enabled = true
tracks/20/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/21/type = "value"
tracks/21/path = NodePath("floor:self_modulate")
tracks/21/interp = 1
tracks/21/loop_wrap = true
tracks/21/imported = false
tracks/21/enabled = true
tracks/21/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/22/type = "value"
tracks/22/path = NodePath("floor3:self_modulate")
tracks/22/interp = 1
tracks/22/loop_wrap = true
tracks/22/imported = false
tracks/22/enabled = true
tracks/22/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="Node2D" type="Node2D"]
position = Vector2( 313.527, 500.437 )
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.972549 )
margin_left = -315.0
margin_top = -501.0
margin_right = 711.0
margin_bottom = 100.0
color = Color( 0.611765, 0.862745, 0.972549, 0.905882 )

[node name="paintedBackground" type="Sprite" parent="."]
position = Vector2( 192.568, -197.822 )
scale = Vector2( 2.55004, 0.584579 )
texture = ExtResource( 2 )

[node name="question" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 80.3813, -449.742 )
scale = Vector2( 0.27052, 0.27052 )
texture = ExtResource( 3 )

[node name="floor" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -152.85, 71.183 )
scale = Vector2( 0.107333, 0.267803 )
texture = ExtResource( 4 )

[node name="floor2" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 197.701, 71.183 )
scale = Vector2( 0.107333, 0.267803 )
texture = ExtResource( 4 )

[node name="floor3" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 536.853, 71.183 )
scale = Vector2( 0.107333, 0.267803 )
texture = ExtResource( 4 )

[node name="estante" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -171.698, -137.272 )
scale = Vector2( 0.739938, 0.739938 )
texture = ExtResource( 5 )

[node name="kidReading" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 67.0292, -5.04102 )
scale = Vector2( 0.290657, 0.289857 )
texture = ExtResource( 6 )

[node name="option1" type="ColorRect" parent="."]
editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 717.822
margin_top = -251.791
margin_right = 1169.82
margin_bottom = -189.791

[node name="tresPorquinhos" type="TouchScreenButton" parent="option1"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -18.3351, -6.30409 )
scale = Vector2( 0.441803, 0.15555 )
normal = ExtResource( 7 )

[node name="tresPorquinhos2" type="TouchScreenButton" parent="option1"]
position = Vector2( 64.9576, 7.8634 )
scale = Vector2( 0.265, 0.265 )
normal = ExtResource( 8 )

[node name="option2" type="ColorRect" parent="."]
editor/display_folded = true
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 716.831
margin_top = -129.204
margin_right = 1168.83
margin_bottom = -63.204

[node name="pequenaSereia" type="TouchScreenButton" parent="option2"]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( -18.9799, -6.37963 )
scale = Vector2( 0.441645, 0.164842 )
normal = ExtResource( 7 )

[node name="pequenaSereia2" type="TouchScreenButton" parent="option2"]
position = Vector2( 66.2281, 9.28662 )
scale = Vector2( 0.258, 0.258 )
normal = ExtResource( 9 )

[node name="chapeuzinhoVermelho" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 277.72, -183.674 )
scale = Vector2( 0.243, 0.243 )
normal = ExtResource( 10 )

[node name="light" type="Sprite" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 624.247, -482.916 )
texture = ExtResource( 11 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/transition = SubResource( 1 )
anims/transition2 = ExtResource( 15 )
anims/transition3 = SubResource( 2 )

[node name="voltar" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 428.034, -24.0825 )
scale = Vector2( 0.229481, 0.229481 )
normal = ExtResource( 16 )

[node name="musicButton" type="TouchScreenButton" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
position = Vector2( 650.283, -493.212 )
scale = Vector2( 0.309, 0.309 )
normal = ExtResource( 17 )

[connection signal="pressed" from="option1/tresPorquinhos" to="." method="_on_tresPorquinhos_pressed"]
[connection signal="pressed" from="option2/pequenaSereia" to="." method="_on_pequenaSereia_pressed"]
[connection signal="pressed" from="chapeuzinhoVermelho" to="." method="_on_chapeuzinhoVermelho_pressed"]
[connection signal="pressed" from="voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="musicButton" to="." method="_on_musicButton_pressed"]
